[package]
description = "Large fixed-size integer arithmetic"
homepage = "http://parity.io"
repository = "https://github.com/paritytech/parity-common"
license = "MIT OR Apache-2.0"
name = "uint"
version = "0.9.5"
authors = ["Parity Technologies <admin@parity.io>"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
hex = { git = "https://github.com/0xmozak/rust-hex", branch="restricted_std", default-features = false }
crunchy = { git = "https://github.com/0xmozak/crunchy", branch="restricted_std", default-features = false }
quickcheck = { version = "1", optional = true }
byteorder = { git ="https://github.com/0xmozak/byteorder", branch="restricted_std"}
static_assertions = "1.0.0"
arbitrary = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["byteorder/std", "crunchy/std", "hex/std"]

[[example]]
name = "modular"

[[test]]
name = "uint_tests"
required-features = ["std"]

[dev-dependencies]
criterion = "0.5.1"
num-bigint = "0.4.0"

[target.'cfg(all(unix, target_arch = "x86_64"))'.dev-dependencies]
rug = { version = "1.6.0", default-features = false, features = ["integer"] }

[[bench]]
name = "bigint"
harness = false
